# py-lipidr

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: benchmark.py  compare_R_vs_Python.ipynb
pylipidr/: __init__.py  annotate.py  de.py  experiment.py  io.py  lsea.py  normalize.py  qc.py
tests/: r_reference_driver.R  test_r_parity.py  test_smoke.py
