[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylipidr"
version = "0.1.0"
description = "Pure-Python port of Bioconductor lipidr — lipidomics data analysis, normalization, differential analysis and lipid-set enrichment (LSEA)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Zehua Zeng", email = "starlitnightly@163.com" },
]
keywords = [
    "lipidomics", "lipidr", "LSEA", "lipid-set-enrichment",
    "differential-expression", "limma", "Skyline", "Metabolomics-Workbench",
    "PQN", "internal-standard-normalization", "mass-spectrometry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=1.5",
    "anndata>=0.8",
    "pygoslin>=2.0",
    "python-limma>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff"]
plotting = ["matplotlib>=3.6"]

[project.urls]
Homepage = "https://github.com/omicverse/py-lipidr"
Repository = "https://github.com/omicverse/py-lipidr"
Issues = "https://github.com/omicverse/py-lipidr/issues"
"Upstream Bioc package" = "https://bioconductor.org/packages/release/bioc/html/lipidr.html"
"Upstream (omicverse)" = "https://github.com/Starlitnightly/omicverse"

[tool.setuptools.packages.find]
include = ["pylipidr*"]
exclude = ["tests*", "examples*", "lipidr-ref*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    "ignore::RuntimeWarning",
]
